# alacritty-ffi-go

./: .gitignore  Makefile  README.md  SIZE_OPTIMIZATION.md
examples/: color_demo.go  cursor_debug.go  go.mod  line_debug.go  main.go
go-bindings/: go.mod  terminal.go  terminal_test.go
lib/: alacritty_ffi.h
rust-ffi/: Cargo.toml
rust-ffi/src/: lib.rs
