[package]
name = "alacritty-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "alacritty_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
alacritty_terminal = { git = "https://github.com/alacritty/alacritty.git", default-features = false }
vte = "0.15.0"
libc = "0.2"

[features]
default = []